// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/customized-progress-dot.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-vertical wmstool-steps-dot"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/error.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-horizontal"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish wmstool-steps-next-error"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-error"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-cross"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Process
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/icon.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-horizontal"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish wmstool-steps-item-custom"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Login
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish wmstool-steps-item-custom"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <i
          class="anticon anticon-solution"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Verification
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process wmstool-steps-item-custom"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <i
          class="anticon anticon-spin anticon-loading"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Pay
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait wmstool-steps-item-custom"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <i
          class="anticon anticon-smile-o"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Done
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress-dot.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-vertical wmstool-steps-dot"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        <span
          class="wmstool-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/simple.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-horizontal"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/small-size.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-horizontal wmstool-steps-small wmstool-steps-label-horizontal"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/step-next.md correctly 1`] = `
<div>
  <div
    class="wmstool-steps wmstool-steps-horizontal wmstool-steps-label-horizontal"
  >
    <div
      class="wmstool-steps-item wmstool-steps-item-process"
    >
      <div
        class="wmstool-steps-item-tail"
      />
      <div
        class="wmstool-steps-item-icon"
      >
        <span
          class="wmstool-steps-icon"
        >
          1
        </span>
      </div>
      <div
        class="wmstool-steps-item-content"
      >
        <div
          class="wmstool-steps-item-title"
        >
          First
        </div>
      </div>
    </div>
    <div
      class="wmstool-steps-item wmstool-steps-item-wait"
    >
      <div
        class="wmstool-steps-item-tail"
      />
      <div
        class="wmstool-steps-item-icon"
      >
        <span
          class="wmstool-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="wmstool-steps-item-content"
      >
        <div
          class="wmstool-steps-item-title"
        >
          Second
        </div>
      </div>
    </div>
    <div
      class="wmstool-steps-item wmstool-steps-item-wait"
    >
      <div
        class="wmstool-steps-item-tail"
      />
      <div
        class="wmstool-steps-item-icon"
      >
        <span
          class="wmstool-steps-icon"
        >
          3
        </span>
      </div>
      <div
        class="wmstool-steps-item-content"
      >
        <div
          class="wmstool-steps-item-title"
        >
          Last
        </div>
      </div>
    </div>
  </div>
  <div
    class="steps-content"
  >
    First-content
  </div>
  <div
    class="steps-action"
  >
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-vertical"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical-small.md correctly 1`] = `
<div
  class="wmstool-steps wmstool-steps-vertical wmstool-steps-small"
>
  <div
    class="wmstool-steps-item wmstool-steps-item-finish"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon anticon anticon-check"
      />
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Finished
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-process"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="wmstool-steps-item wmstool-steps-item-wait"
  >
    <div
      class="wmstool-steps-item-tail"
    />
    <div
      class="wmstool-steps-item-icon"
    >
      <span
        class="wmstool-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="wmstool-steps-item-content"
    >
      <div
        class="wmstool-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="wmstool-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;
